# huly-cef

./: .Dockerignore  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.manager  Dockerfile.ws  README.md  build.rs  run-huly-cef-manager.sh
.cargo/: config.toml
.github/workflows/: build.yaml  deploy.yaml  docker.yaml  release.yaml
cef-resources/macos/: Info.plist
crates/huly-cef/: Cargo.toml
crates/huly-cef-helper/: Cargo.toml  build.rs
crates/huly-cef-helper/src/: cef_lib.rs  ipc.rs  js.rs  main.rs  render_process.rs
crates/huly-cef-manager/: Cargo.toml
crates/huly-cef-manager/src/: instances.rs  main.rs  manager.rs  profiles.rs
crates/huly-cef-tools/: Cargo.toml
crates/huly-cef-tools/src/: build.rs
crates/huly-cef-websockets/: Cargo.toml  build.rs
crates/huly-cef-websockets/src/: main.rs  server.rs  websocket.rs
crates/huly-cef-websockets/src/server/: browser.rs  messages.rs  mod.rs  tab.rs
crates/huly-cef/src/: cef.rs  javascript.rs  js.rs  lib.rs  main.rs  messages.rs  websocket.rs
crates/huly-cef/src/application/: browser_process.rs  ipc.rs  mod.rs  render_process.rs
crates/huly-cef/src/browser/: automation.rs  devtools.rs  keyboard.rs  mod.rs  mouse.rs  state.rs
crates/huly-cef/src/browser/automation/: dom.rs  mod.rs
crates/huly-cef/src/browser/client/: context_menu_handler.rs  dialog_callbacks.rs  display_callbacks.rs  download_callbacks.rs  life_span_callbacks.rs  load_callbacks.rs  mod.rs  render_callbacks.rs  request_callbacks.rs
crates/huly-cef/src/cef/: application.rs  browser.rs  client.rs  javascript.rs  js.rs  messages.rs
crates/huly-cef/src/cef/application/: browser_process.rs  browser_process_callbacks.rs  mod.rs  render_process.rs  render_process_callbacks.rs
crates/huly-cef/src/cef/application/render_process/: handlers.rs  mod.rs
crates/huly-cef/src/cef/client/: display_callbacks.rs  life_span_callbacks.rs  load_callbacks.rs  mod.rs  render_callbacks.rs  request_callbacks.rs
resources/macos/: main.entitlements
resources/pages/: newtab.html
src/: cef.rs  main.rs  websocket.rs
src/cef/: application_callbacks.rs  client.rs  client_callbacks.rs  context_menu_callbacks.rs  lifespan_callbacks.rs  load_callbacks.rs  messages.rs  render_callbacks.rs  render_process_callbacks.rs
src/cef/client/: display_callbacks.rs
src/websocket/: messages.rs
