[package]
name = "huly-cef"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
anyhow = "1.0.95"

cef-ui-util = { git = "https://github.com/hulylabs/cef-ui.git" }

[dependencies]
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

cef-ui = { git = "https://github.com/hulylabs/cef-ui.git" }
cef-ui-helper = { git = "https://github.com/hulylabs/cef-ui.git" }
cef-ui-util = { git = "https://github.com/hulylabs/cef-ui.git" }

crossbeam-channel = "0.5.14"
tungstenite = "0.26.2"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures-util = { version = "0.3.31", default-features = false, features = [
    "sink",
    "std",
] }
serde_repr = "0.1.20"
clap = { version = "4.5.31", features = ["derive"] }
