[package]
name = "huly-cef-helper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
anyhow = { workspace = true }
cef-ui-util = { path = "/Users/user/repos/cef-ui/crates/cef-ui-util" }

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
libloading = "0.8"

# cef-ui = { git = "https://github.com/hulylabs/cef-ui.git", features = ["no-cef-link"] }
# cef-ui-sys = { git = "https://github.com/hulylabs/cef-ui.git" }
# cef-ui-helper = { git = "https://github.com/hulylabs/cef-ui.git" }

# cef-ui = { path = "/Users/user/repos/cef-ui/crates/cef-ui" }
cef-ui-sys = { path = "/Users/user/repos/cef-ui/crates/cef-ui-sys" }
cef-ui-helper = { path = "/Users/user/repos/cef-ui/crates/cef-ui-helper" }
