[package]
name = "huly-cef-helper"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
anyhow = { workspace = true }
cef-ui-util = { git = "https://github.com/hulylabs/cef-ui.git" }

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
libloading = "0.8"


cef-ui-helper = { git = "https://github.com/hulylabs/cef-ui.git", rev = "6a8b96a" }
