[package]
name = "huly-cef-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "*"
axum = "0.8.4"
