[package]
name = "huly-cef-manager"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }

clap = { version = "4.5.41", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "*"
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
