[package]
name = "huly-cef-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

zip = "4.1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
cef-ui-util = { git = "https://github.com/hulylabs/cef-ui.git" }

[[bin]]
name = "huly-cef-build"
path = "src/build.rs"
