[package]
name = "huly-cef-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }

zip = "4.1.0"
dircpy = "0.3.19"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
cef-ui-util = { git = "https://github.com/hulylabs/cef-ui.git", branch = "release/v138" }

[[bin]]
name = "huly-cef-build"
path = "src/build.rs"
