[package]
name = "huly-cef-websockets"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
anyhow = { workspace = true }
cef-ui-util = { git = "https://github.com/hulylabs/cef-ui.git" }

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

huly-cef = { path = "../huly-cef" }

serde_json = "1.0.139"

futures = "0.3.31"
tungstenite = "0.26.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.2"

cef-ui = { git = "https://github.com/hulylabs/cef-ui.git" }
