[package]
name = "huly-cef"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
url = "2.5"
crossbeam-channel = "0.5.14"

cef-ui = { git = "https://github.com/hulylabs/cef-ui.git" }
