[package]
name = "huly-cef"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
anyhow = { workspace = true }

tokio = { version = "1", features = ["full"] }
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
serde_repr = "0.1"
serde_json = "1.0"
url = "2.5"
crossbeam-channel = "0.5"

cef-ui = { git = "https://github.com/hulylabs/cef-ui.git" }
